# aika-shell

./: .gitignore  README.md  RequestHandler.ts  _animations.scss  _public-colors.scss  app.ts  config.js  config.ts  data.ts  flake.nix  greet.tsx  greeter.tsx  main.ts  meson.build  services.ts  style.scss  utils.ts  vars.ts  window.js  window.ts
component/: index.ts  popup-window.tsx  state-bar.tsx  tray.tsx
configs/: common.ts  config.ts  index.ts
data/: aika-shell.gresource.xml  meson.build
data/scss/: main.scss  meson.build
data/ui/: bar.blp  meson.build
data/ui/widget/: clock.blp  notification-popup.blp
data/ui/window/: bar.blp  notification-container.blp
handler/: app-launcher.ts  clipboard.ts  lockscreen.ts  powermenu.ts  screenshot.ts  wf-recorder.ts  wf-recorder.tsx
lib/: DDCBrightness.ts  NetworkSpeed.ts  ddc-brightness.ts  network-speed.ts  wallpaper.ts  wf-recorder.ts
modules/clipboard/: index.ts
modules/notifications/: index.ts  style.scss
modules/right-bar/: index.ts  style.scss
modules/top-bar/: index.ts  style.scss
nix/: aika-greet-hyprland.nix  devshell.nix  package.nix  packages.nix
old/: _public-colors.scss  greet.tsx  services.ts  style.scss  tools.ts  tsconfig.json
old/configs/: config.ts  index.ts
old/handler/: lockscreen.ts  wf-recorder.ts
old/lib/: network-speed.ts  wf-recorder.ts
old/widget/: powermenu.tsx
services/: ddc-brightness.ts  index.ts  network-speed.ts  notification.ts  services.ts  time.ts
src/: aika-shell.vala  bar.vala  ensure-types.vala  gen_ensure_type.awk  meson.build  utils.vala
src/lib/: ddcutil.vala
src/services/: notifd.vala  time.vala
src/widget/: clock.vala  notification-popup.vala  state-bar.vala  tray.vala
src/window/: bar.vala  notification-container.vala
widget/: Bar.tsx  BrightnessIcon.tsx  Clock.tsx  DevicesIcon.tsx  EventIcon.tsx  FloatMenu.tsx  FloatingMenu.tsx  Icon.tsx  NetSpeed.tsx  NetworkIcon.tsx  ScreenMask.tsx  ScreenShot.tsx  Space.tsx  Tray.tsx  app-launcher.tsx  brightness-icon.tsx  brightness-tooltip.tsx  clipboard.tsx  lockscreen.tsx  network-icon.tsx  network-tooltip.tsx  notification-popup.tsx  notification-tooltip.tsx  notification.tsx  notifications-icon.tsx  popup-window.tsx  powermenu.tsx  recorder-icon.tsx  system-tooltip.tsx  tooltip.ts  volume-icon.tsx  volume-tooltip.tsx
widget/base/: EventIcon.tsx  RegularWindow.tsx  event-icon.tsx  index.ts  popup-window.tsx  regular-window.tsx  space.tsx  transition-in-out.tsx
widget/top-bar/: Bar.tsx  bar.tsx  brightness-icon.tsx  brightness-popup.tsx  brightness-tooltip.tsx  clock.tsx  index.ts  net-speed.tsx  network-icon.tsx  network-tooltip.tsx  notification-tooltip.tsx  notifications-icon.tsx  notifications-tooltip.tsx  recorder-icon.tsx  status-indicators.tsx  system-icon.tsx  system-tooltip.tsx  tray.tsx  (+4 more)
window/: bar.tsx  index.ts  notification.tsx
(+25 files in other folders)
